# gui-scale-applet

./: .gitignore  Cargo.lock.orig  Cargo.toml  LICENSE  README.md  com.bhh32.gui-scale-applet.yml  com.github.bhh32.GUIScaleApplet.yaml  com.github.bhh32.GUIScaleApplet.yml  i18n.toml  justfile  justfile.orig
.cargo/: config.toml
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/summaries/: 15f6d4e7550d35ef67a18353849b8b1d5dfbce0f68b3754aad3d53e0d0ec78a1-a2a7de4e17cc6bfd9bc4b3763ec7d35fb2e442c9a16907af8164c39d8cfea716.delta  514e3c83eb1daa8a890789c55bce8fa09e1a85ee733a070b96e863ef6fa754d8-a2a7de4e17cc6bfd9bc4b3763ec7d35fb2e442c9a16907af8164c39d8cfea716.delta  6bf75489437a93f4aa89a1e0b33a96dadacf2cfa4e22162ef54857961ccc14ce-a2a7de4e17cc6bfd9bc4b3763ec7d35fb2e442c9a16907af8164c39d8cfea716.delta  8239a2610f0bd8a67c2833f9ae26180cd3b73b6faa260c8e18f7495a5c8ec681-a2a7de4e17cc6bfd9bc4b3763ec7d35fb2e442c9a16907af8164c39d8cfea716.delta  (+1 more)
.flatpak-builder/checksums/: x86_64-com.bhh32.gui-scale-applet.yml
.github/: FUNDING.yml
.github/workflows/: flatpak_release.yml  main.yml
data/: com.bhh32.GUIScaleApplet.desktop  com.bhh32.GUIScaleApplet.xml  com.bhh32.GuiScaleApplet.desktop  com.bhh32.GuiScaleApplet.service  com.bhh32.gui-scale-applet.desktop  com.bhh32.gui-scale-applet.metainfo.xml  com.github.bhh32.GUIScaleApplet.desktop
docs/: _config.yml  index.md
docs/assets/: main.scss
docs/assets/css/: main.scss  style.scss
i18n/en/: gui_scale_applet.ftl
i18n/es/: gui_scale_applet.ftl
i18n/fr/: gui_scale_applet.ftl
i18n/nl/: gui_scale_applet.ftl
i18n/sv/: gui_scale_applet.ftl
src/: .window.rs.swp  config.rs  de.rs  lib.rs  localize.rs  logic.rs  logic.rs.orig  main.rs  notifications.rs  tailscale_api.rs  tray.rs  window.rs
(+6 files in other folders)
