[package]
name = "gui-scale-applet"
version = "1.0.0"
edition = "2021"

[dependencies]
rust-embed = "8.0.0"
tokio = "1.31"
serde = "1.0.210"
url = "2.4.0"
tracing = "0.1.40"
ron = "0.8.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland", "tokio", "desktop"]

[features]
xdg-portal = ["libcosmic/xdg-portal"]
rfd = ["libcosmic/rfd"]
default = ["xdg-portal"]
