[package]
name = "gui-scale-applet"
version = "3.10.0"
edition = "2024"

[dependencies]
rust-embed = "8.0.0"
tokio = { version = "1.31", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1"
url = "2.4.0"
notify-rust = "4"
regex = "1.11.1"
dirs = "5"
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1"] }
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland", "tokio", "desktop"]

[features]
xdg-portal = ["libcosmic/xdg-portal"]
rfd = ["libcosmic/rfd"]
default = ["xdg-portal"]
